# arduino-libmad

./: CMakeLists.txt  Doxyfile  README.md  library.properties
docs/html/: _m_p3_buffer_8h_source.html  _m_p3_decoder_m_a_d_8h_source.html  annotated.html  classes.html  classlibmad_1_1_base_buffer-members.html  classlibmad_1_1_base_buffer.html  classlibmad_1_1_m_p3_decoder_m_a_d-members.html  classlibmad_1_1_m_p3_decoder_m_a_d.html  classlibmad_1_1_single_buffer-members.html  classlibmad_1_1_single_buffer.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  mad__config_8h.html  mad__config_8h_source.html  mad__log_8h.html  mad__log_8h_source.html  mad__pgmspace_8h.html  mad__pgmspace_8h_source.html  structlibmad_1_1_input_data-members.html  structlibmad_1_1_input_data.html  structlibmad_1_1_mad_audio_info-members.html  structlibmad_1_1_mad_audio_info.html  structlibmad_1_1_mad_input_buffer-members.html  structlibmad_1_1_mad_input_buffer.html  structlibmad_1_1_mad_input_data-members.html  structlibmad_1_1_mad_input_data.html  structlibmad_1_1_range-members.html  structlibmad_1_1_range.html
examples/mp3_cb/: CMakeLists.txt  desktop_mp3.cpp  mp3_cb.ino
examples/mp3_write/: CMakeLists.txt  desktop_mp3.cpp  mp3_write.ino
src/: MP3DecoderMAD.h  mad_config.h  mad_log.h
src/libmad/: bit.c  config.h  decoder.c  decoder.h  fixed.c  fixed.h  frame.c  frame.h  global.h  huffman.c  layer12.c  layer12.h  layer3.c  mad.h  mad_pgmspace.h  minimad.c  stream.c  stream.h  synth.c  synth.h  timer.c  version.c
(+22 files in other folders)
